--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-
+/*
+/
+/
+Let's get some help from BootStrap
+*/
 
 @import url('bootstrap.css');
 @import url('bootstrap-theme.css');
@@ -24,12 +28,21 @@
 body {
 
     font-family: 'Klavika-light', 'sans-serif'; 
+    color: #686868;
+
 }
 
 h1, h2 {
 
     font-family: 'Elderkin-Medium', 'sans-serif';    
 }
+
+/*
+/
+/
+These are the elements for navigation bar
+/
+*/
 
 #logo{
 
@@ -46,10 +59,58 @@ h1, h2 {
     font-family: 'Elderkin-Medium', 'sans-serif'; 
 }
 
-.menu-container{
+/*.menu-container{
 
     float: left;
+}*/
+
+.menu-items{
+
+    font-size: 2em;
+    margin: 0 0px;
+    margin-top: 35px;
+    float: left;
+
 }
+
+/*
+/
+/
+These are the elements of content
+/
+*/
+
+#what-code-math{
+
+    background-color: blue;
+    width: 100%;
+    height: 100%;
+
+}
+
+#trajectory{
+    
+    background-color: green;
+    width: 100%;
+    height: 100%;
+
+}
+
+#code-examples{
+    
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+
+}
+
+#contact{    
+    background-color: brown;
+    width: 100%;
+    height: 100%;
+
+}
+
 
 
 
