--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ These are the elements for navigation bar
     float: left;
 }
 
-.main-menu{
+#menu{
 
     font-family: 'Elderkin-Medium', 'sans-serif'; 
 }
@@ -66,12 +66,13 @@ These are the elements for navigation bar
 
 .menu-items{
 
-    font-size: 2em;
-    margin: 0 0px;
+    font-size: 24px;
+    margin: 0 10px;
     margin-top: 35px;
     float: left;
 
 }
+
 
 /*
 /
@@ -110,6 +111,34 @@ These are the elements of content
     height: 100%;
 
 }
+
+#what-code-image{
+
+    float:left;
+}
+
+#codeMath-definition{
+
+
+    float: left;
+    margin: 300px auto 200px auto;
+}
+
+/*This is to overwrites the class that fullpage.js does.
+/
+*/
+.tableCell{
+
+    padding-top: 122px;
+}
+
+.table{
+
+    margin-bottom: 0px;
+}
+/*
+/
+*/
 
 
 
