--- a/css/style.css
+++ b/css/style.css
@@ -170,17 +170,55 @@ These are the elements of content
     font-size: 24px;
 }
 
-.what-content{
-
+.article-container{
+    min-height: 550px;
+    max-height: inherit;
 }
 
 .page-title{
-    margin: 30px 0px 30px 60px;
+    margin: 50px 0px 20px 60px;
 }
 
-/*.page-text{
-    color: #d1d1d1;
-}*/
+.page-text{
+    color: #EBE9E9;
+}
+
+/*
+//
+//
+Trajectory elements
+//
+//
+*/
+
+#trajectory-text{
+    margin: 50px 0px 0px 60px;
+}
+
+/*
+//
+//
+FrameWork elements
+//
+//
+*/
+
+#framework-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 50px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#framework-image{
+    float: left;
+    width: 400px;
+    height: 400px;
+    margin-left: 10px;
+}
+
 
 
 
