--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -693,12 +693,12 @@ samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 code {
-  padding: 2px 4px;
+  /*padding: 2px 4px;
   font-size: 90%;
   color: #c7254e;
   white-space: nowrap;
   background-color: #f9f2f4;
-  border-radius: 4px;
+  border-radius: 4px;*/
 }
 kbd {
   padding: 2px 4px;
