--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*---- Let's reset some CSS first ----*/
+@import url('reset.css');
+
 /*
 /
 /
@@ -6,6 +9,8 @@ Let's get some help from BootStrap
 
 @import url('bootstrap.css');
 @import url('bootstrap-theme.css');
+
+
 
 /*@font-face{
     font-family: 'Klavika-Light';
@@ -218,9 +223,51 @@ FrameWork elements
     height: 400px;
     margin-left: 10px;
 }
+/*------- 1. Variables -------*/
 
+#variables-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
 
+#variables-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
 
+#variables-code{
+    float: left;
+}
+
+.generic-code{
+   color: #EBE9E9;
+   font-size: 18px;    
+}
+.canvas-container{
+    overflow: hidden;
+    margin-left: 100px;
+    float: left;
+    min-width: 400px;
+}
+
+#variables-canvas-text{
+    font-size: 24px;
+}
+
+#variables-canvas{
+    /*background-color: blue;*/
+    min-width: 400px;
+    min-height: 400px;
+    max-width: 200px;  
+    /*position: absolute;*/
+    /*width: 100%;*/
+    overflow: auto;
+}
 
 
 /*This is to overwrite the classes that fullpage.js adds.
