--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,34 @@ FrameWork elements
 
 }
 
+/*------- 3. Cartesian Plane  -------*/
+
+#cartesian-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#cartesian-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#cartesian-container{
+    overflow: hidden;
+    margin-left: 80px;
+    float: left;
+    min-width: 200px;
+}
+
+#cartesian-canvas-text{
+
+}
+
 /*This is to overwrite the classes that fullpage.js adds.
 /
 */
