--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,7 @@ FrameWork elements
 #comp-canvas-text{
 
 }
-/*------- 5. Circle on the Cartesian Plane -------*/
+/*------- 6. Circle on the Cartesian Plane -------*/
 
 #circle-text{
     font-size: 24px;
@@ -412,6 +412,190 @@ FrameWork elements
 #circle-paper{
     background-color: white;
 }
+
+/*------- 7. Circle on the X Axis -------*/
+
+#circlex-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#circlex-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#circlex-container{
+    overflow: hidden;
+    margin-left: 80px;
+    float: left;
+    min-width: 200px;
+}
+
+#circlex-canvas-text{
+
+}
+
+#circlex-paper{
+    background-color: white;
+}
+
+/*------- 8. Circle on the Y Axis -------*/
+
+#circley-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#circley-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#circley-container{
+    overflow: hidden;
+    margin-left: 80px;
+    float: left;
+    min-width: 200px;
+}
+
+#circley-canvas-text{
+
+}
+
+#circley-paper{
+    background-color: white;
+}
+
+/*------- 8. Circle on the Y Axis -------*/
+
+#circle-color-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#circle-color-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#circle-color-container{
+    overflow: hidden;
+    margin-left: 80px;
+    float: left;
+    min-width: 200px;
+}
+
+#circle-color-canvas-text{
+
+}
+
+#circle-color-paper{
+    background-color: white;
+}
+
+/*------- 12. Drawing multiple elements on the screen -------*/
+
+#multiple-text{
+    font-size: 24px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#multiple-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#multiple-container{
+    overflow: hidden;
+    margin-left: 80px;
+    float: left;
+    min-width: 200px;
+}
+
+#multiple-canvas-text{
+
+}
+
+#multiple-paper{
+    background-color: white;
+}
+
+#multiple-canvas{
+    float:left;
+}
+
+#picker{    
+    float: left;
+    overflow: hidden;
+    width: 75px;
+}
+
+#multiple-circle-picker{
+    overflow: auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: orange;
+}
+#picker-text{
+
+
+}
+
+#code{
+    float:left;
+    width: 300px;
+    overflow: auto;
+    height: 100%;
+    background-color: lightgreen;
+}
+
+.circle-color-input{
+    display: inline;
+    transition: 0.5s padding;
+    /*font-size: 15rem;*/
+    font-weight: bold;
+    /*padding: 8rem;*/
+    /*padding-left: 10rem;*/
+    outline: none;
+    z-index: 500;
+    /*position: relative;*/
+}
+
+.circle {
+    width:60px;
+    height:10px;
+    overflow: hidden;
+
+}
+
+.circle-radius{
+    width:100px;
+    height:10px;
+    overflow: hidden;
+}
+
 
 /*This is to overwrite the classes that fullpage.js adds.
 /
