--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,8 @@ These are the elements of content
     width: 100%;
     height: 100%;
     background-image: url('../images/codemath_intro_blured.jpg');
+    background-repeat:no-repeat;
+    background-size: cover;
     /*will get back to this*/
     /*-webkit-filter: blur(5px);
     -moz-filter: blur(5px);
@@ -160,6 +162,8 @@ These are the elements of content
     width: 100%;
     height: 100%;
 }
+
+
 
 #code-examples{    
     /*background-color: yellow;*/
@@ -183,7 +187,7 @@ These are the elements of content
     margin: 90px auto 20px 50px;
     width: 500px;
     height: 300px;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .article-container{
@@ -210,12 +214,12 @@ Trajectory elements
 #trajectory-text{
     float: left;
     margin: 90px auto 20px 50px;
-    width: 500px;
-    height: 300px;
+    width: 400px;
+   /* height: 300px;*/
     font-size: 16px;
 }
-#rajectory-image{
-    margin-left: 20px;
+#trajectory-image{
+    margin-left: 60px;
 }
 
 /*
@@ -650,6 +654,28 @@ FrameWork elements
     width:100px;
     height:10px;
     overflow: hidden;
+}
+
+/*------- 11. Drawing multiple elements on the screen -------*/
+
+#conclusion-text{
+    font-size: 24px;
+    margin: 0px 0px 0px 60px;
+    float: left;
+    padding-top: 30px;
+}
+
+#conclusion-definition{
+    margin-top: 15px;
+    width: 400px;
+    margin-bottom: 40px;
+}
+
+#conclusion-container{
+    overflow: hidden;
+    margin-left: 20px;
+    float: left;
+    min-width: 200px;
 }
 
 
